src/v8/CAPI_Meters.pas


end;
PROCEDURE Meters_Get_Totals_GR();cdecl;
// Same as Meters_Get_Totals but uses global result (GR) pointers
begin
   Meters_Get_Totals(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Meters_Get_Peakcurrent(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k         :Integer;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMeterObj.NPhases -1) + 1);
            FOR k := 0 to pMeterObj.NPhases-1 DO  Result[k] := pMeterObj.SensorCurrent^[k+1];
        End
        Else Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End;

end;
PROCEDURE Meters_Get_Peakcurrent_GR();cdecl;
// Same as Meters_Get_Peakcurrent but uses global result (GR) pointers
begin
   Meters_Get_Peakcurrent(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Meters_Set_Peakcurrent(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k, i      :Integer;
Begin
   Value := PDoubleArray(ValuePtr);
// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            k := (0);   // get starting index for Value array
            FOR i := 1 to pMeterObj.NPhases DO Begin
               pMeterObj.SensorCurrent^[i] := Value[k];
               inc(k);
            End;
        End;
   End;

end;
//------------------------------------------------------------------------------
PROCEDURE Meters_Get_CalcCurrent(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k         :Integer;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMeterObj.NPhases -1) + 1);
            FOR k := 0 to pMeterObj.NPhases-1 DO  Result[k] := Cabs(pMeterObj.CalculatedCurrent^[k+1]);
        End
        Else Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End;

end;
PROCEDURE Meters_Get_CalcCurrent_GR();cdecl;
// Same as Meters_Get_CalcCurrent but uses global result (GR) pointers
begin
   Meters_Get_CalcCurrent(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Meters_Set_CalcCurrent(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k, i      :Integer;
Begin
   Value := PDoubleArray(ValuePtr);
// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            k := (0);   // get starting index for Value array
            FOR i := 1 to pMeterObj.NPhases DO Begin
               pMeterObj.CalculatedCurrent^[i] := cmplx(Value[k], 0.0);   // Just set the real part
               inc(k);
            End;
        End;
   End;

end;
//------------------------------------------------------------------------------
PROCEDURE Meters_Get_AllocFactors(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
  Result: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k         :Integer;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMeterObj.NPhases -1) + 1);
            FOR k := 0 to pMeterObj.NPhases-1 DO  Result[k] := pMeterObj.PhsAllocationFactor^[k+1];
        End
        Else Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End;

end;
PROCEDURE Meters_Get_AllocFactors_GR();cdecl;
// Same as Meters_Get_AllocFactors but uses global result (GR) pointers
begin
   Meters_Get_AllocFactors(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Meters_Set_AllocFactors(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   pMeterObj :TEnergyMeterObj;
   k, i      :Integer;
Begin
   Value := PDoubleArray(ValuePtr);
// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            k := (0);   // get starting index for Value array
            FOR i := 1 to pMeterObj.NPhases DO Begin
               pMeterObj.PhsAllocationFactor^[i] := Value[k];   // Just set the real part
               inc(k);
            End;
        End;
   End;

end;
//------------------------------------------------------------------------------
function Meters_Get_MeteredElement_AnsiString():AnsiString;inline;
Var
   pMeterObj :TEnergyMeterObj;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            Result := pMeterObj.ElementName;
        End
        Else Result := '';
   End
   ELSE Begin
        Result := '';
   End;

end;

function Meters_Get_MeteredElement():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Meters_Get_MeteredElement_AnsiString());
end;
//------------------------------------------------------------------------------
function Meters_Get_MeteredTerminal():Integer;cdecl;
Var
   pMeterObj :TEnergyMeterObj;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
     Begin
          pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
          If pMeterObj <> Nil Then
            Begin
                Result := pMeterObj.MeteredTerminal;
            End
          Else Result := 0;
     End
   ELSE Begin
        Result := 0;
   End;

end;
//------------------------------------------------------------------------------
procedure Meters_Set_MeteredElement(const Value: PAnsiChar);cdecl;
Var
   pMeterObj :TEnergyMeterObj;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            pMeterObj.elementName := Value;
            pMeterObj.MeteredElementChanged := TRUE;
            pMeterObj.RecalcElementData(ActiveActor);
        End;
   End;

end;
//------------------------------------------------------------------------------
procedure Meters_Set_MeteredTerminal(Value: Integer);cdecl;
Var
   pMeterObj :TEnergyMeterObj;
Begin

// First make sure active circuit element is a meter
   IF ActiveCircuit[ActiveActor] <> Nil THEN
   Begin
        pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
        If pMeterObj <> Nil Then
        Begin
            pMeterObj.MeteredTerminal := Value;
            pMeterObj.MeteredElementChanged := TRUE;
            pMeterObj.RecalcElementData(ActiveActor);
        End;
   End;

end;
//------------------------------------------------------------------------------
function Meters_Get_DIFilesAreOpen():WordBool;cdecl;
begin
     IF ActiveCircuit[ActiveActor] <> Nil THEN Begin
            Result := DIFilesAreOpen[ActiveActor];    // Global variable
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_CloseAllDIFiles();cdecl;
begin
     IF ActiveCircuit[ActiveActor] <> Nil THEN Begin
        EnergyMeterClass[ActiveActor].CloseAllDIFiles(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_OpenAllDIFiles();cdecl;
begin
     IF ActiveCircuit[ActiveActor] <> Nil THEN Begin
        EnergyMeterClass[ActiveActor].OpenAllDIFiles(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_SampleAll();cdecl;
begin
     IF ActiveCircuit[ActiveActor] <> Nil THEN Begin
        EnergyMeterClass[ActiveActor].SampleAll(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_SaveAll();cdecl;
begin
     IF ActiveCircuit[ActiveActor] <> Nil THEN Begin
        EnergyMeterClass[ActiveActor].SaveAll(ActiveActor);
     End;
end;
//------------------------------------------------------------------------------
PROCEDURE Meters_Get_AllEndElements(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  pMeterObj :TEnergyMeterObj;
  k, last:Integer;
  elem : TDSSCktElement;
  node : TCktTreeNode;
Begin
  Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> Nil THEN WITH ActiveCircuit[ActiveActor] DO Begin
    pMeterObj := EnergyMeters.Active;
    if pMeterObj <> Nil then begin
      last := pMeterObj.BranchList.ZoneEndsList.NumEnds - 1;
      DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (last) + 1);
      for k := 0 to last do begin
        pMeterObj.BranchList.ZoneEndsList.Get(k+1, node);
        elem := node.CktObject;
        Result[k] := DSS_CopyStringAsPChar(Format ('%s.%s', [elem.ParentClass.Name, elem.Name]));
      end;
    end;
  End;
end;
PROCEDURE Meters_Get_AllEndElements_GR();cdecl;
// Same as Meters_Get_AllEndElements but uses global result (GR) pointers
begin
   Meters_Get_AllEndElements(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;
